// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetaList should match snapshot (default) 1`] = `
<div
  className="c-notification-list--meta"
>
  <div
    className="c-notification-list__head"
  >
    <h3>
      Meta
    </h3>
    <button
      className="c-icon-button qa-refresh-list"
      onClick={[Function]}
    >
      <i
        className="fas fa-sync"
      />
    </button>
  </div>
  <hr />
  <div
    className="c-notification-list__body"
  >
    <p
      className="u-margin-none"
    >
      No Notifications
    </p>
  </div>
</div>
`;

exports[`MetaList should match snapshot (list) 1`] = `
<div
  className="c-notification-list--meta"
>
  <div
    className="c-notification-list__head"
  >
    <h3>
      Meta
    </h3>
    <button
      className="c-icon-button qa-refresh-list"
      onClick={[Function]}
    >
      <i
        className="fas fa-sync"
      />
    </button>
  </div>
  <hr />
  <div
    className="c-notification-list__body"
  >
    <div
      key=""
    />
  </div>
</div>
`;
